--- a/project_php_poo/assets/css/styles.css
+++ b/project_php_poo/assets/css/styles.css
@@ -29,6 +29,17 @@ a:hover{
     color:red;
 }
 
+table{
+    text-align: center;
+    width: 100%;
+    border: 1px solid #555;
+}
+
+td{
+    border-top: 1px solid #ccc;
+    padding: 2px;
+}
+
 /*CONTAINER*/
 
 #container{
@@ -227,6 +238,12 @@ button, .button{
     background: #33AE3D;
     color: white !important;
     text-decoration: none;
+}
+
+.button-small{
+    width: 120px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 label,
