--- a/project_php_poo/assets/css/styles.css
+++ b/project_php_poo/assets/css/styles.css
@@ -187,12 +187,16 @@ td{
 
 /* FORMS */
 
+.form_container{
+    width: 50%;
+}
 
 label,
 input[type="text"],
 input[type="password"],
 input[type="email"],
-select{
+input[type="number"],
+select, textarea{
     display: block;
     width: 95%;
     margin-top: 2px;
