--- a/project_php_poo/assets/css/styles.css
+++ b/project_php_poo/assets/css/styles.css
@@ -250,6 +250,16 @@ button, .button{
     margin-bottom: 20px;
 }
 
+.button-gestion{
+    margin-top:5px;
+    margin-bottom: 5px;
+}
+
+.button-red{
+    background: red;
+    border: 1px solid red;
+}
+
 label,
 input[type="button"],
 input[type="submit"],
