--- a/project_php_poo/assets/css/styles.css
+++ b/project_php_poo/assets/css/styles.css
@@ -311,6 +311,17 @@ button{
     margin: 10px;
 }
 
+.product a{
+    color: black;
+    text-decoration: none;
+}
+
+.product a:hover{
+    color:#555;
+    
+}
+
+
 .product img{
     height: 130px;
     margin-bottom: 10px;
@@ -320,6 +331,45 @@ button{
     font-weight: bold;
     color: #555;
     margin: 10px;
+}
+
+#detail-product{
+    width: 100%;
+}
+
+#detail-product .image{
+    display:block;
+    width: 44%;
+    float: left;
+    
+}
+
+#detail-product img{
+    display:block;
+    width: 100%;
+    float: left;
+}
+
+#detail-product .data{
+    
+    width: 40%;
+    float: right;
+    margin-right: 40px;
+}
+
+#detail-product .button{
+    width: 100px;
+    text-align: center;
+}
+
+#detail-product .description{
+    margin-bottom: 20px;
+}
+
+#detail-product .price{
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #444;
 }
 
 
