--- a/project_php_poo/assets/css/styles.css
+++ b/project_php_poo/assets/css/styles.css
@@ -392,6 +392,25 @@ button{
 }
 
 /*CARRITO*/
+
+.delete-carrito{
+    width: 295px;
+    float: left;
+}
+
+.button-delete{
+    display: block;
+    float: left;
+    width: 100px;
+    
+}
+
+.button-carrito{
+  width: 60px;
+  margin: 0px auto;
+  text-align: center;  
+}
+
 .total-carrito{
     width: 295px;
     float: right;
@@ -408,3 +427,17 @@ button{
     float: right;
     width: 100px;
 }
+
+.updown-unidades{
+    width: 60%;
+    margin: 0px auto;
+}
+.updown-unidades .button{
+    
+    display: block;
+    width: 20px;
+    float: left;
+    padding: 2px;
+    margin: 1px;
+}
+
